"version 6.05"